--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <title>Newspaper Clustering</title>
 </head>
+<style>
+    .links line {
+  stroke: #999;
+  stroke-opacity: 0.6;
+}
+
+.nodes circle {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+</style>
 
 <body>
 
@@ -18,9 +29,10 @@
 <button id="submit">Submit</button>
 </form>
 
-<div id='text' class="text"></div>
+<svg></svg>
 
 <script type=text/javascript src="{{ url_for('static', filename='jquery.min.js') }}"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script type=text/javascript src="{{ url_for('static', filename='script.js') }}"></script>
 
 </body>
