--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,14 @@
     .nodes circle {
       stroke: #fff;
       stroke-width: 1.5px;
+        z-index: 9998;
     }
 
     .node text {
-  pointer-events: none;
-  font: 10px sans-serif;
-}
+      pointer-events: none;
+      font: 10px sans-serif;
+        z-index: 9999;
+    }
 </style>
 
 <body>
