--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 <button id="submit">Submit</button>
 </form>
 
-<svg width="960" height="600"></svg>
+<svg></svg>
 
 <script type=text/javascript src="{{ url_for('static', filename='jquery.min.js') }}"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
