--- a/static/style.css
+++ b/static/style.css
@@ -4,9 +4,9 @@ body{
 }
 
 form{
-    width: 50%;
+    width: 45%;
 	margin: 0.3em auto 0 auto;
-	font-size: 4em;
+    font-size: 4vw;
 	line-height: 1.5;
     position: relative;
     top: 45vh;
