added import init and also changed the wording of one loading message

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <img class="loading" src="{{ url_for('static', filename='balls.svg') }}">
     <div class="loading msg">Cutting out newspaper articles</div>
     <div class="loading msg">Arranging articles</div>
-    <div class="loading msg">Making newspaper hats</div>
+    <div class="loading msg">Making hats out of newspapers</div>
     <div class="loading msg">Clustering articles</div>
     <div class="loading msg">Gluing articles together</div>
 </div>
