--- a/Application/templates/index.html
+++ b/Application/templates/index.html
@@ -18,7 +18,9 @@
     <input type='text' size='3' id='results' placeholder="100"> newspaper articles
     <br/>from <input type='text' size='10' id='startDate' class="datepicker-here" data-language='en' placeholder="2016-07-10">
     <br/>to <input type='text' size='10' id='endDate' class="datepicker-here" data-language='en' placeholder="2016-08-10">
-    <br/>into <input type='text' size='2' id='clusters' placeholder="20"> clusters
+    <br/>into maximum of
+    <br/>
+    <input type='text' size='2' id='clusters' placeholder="20"> clusters
     <button id="submit">Group!</button>
 </form>
 
